# vision-3d

./: CMakeLists.txt  README  README.md  mainpage.dox  manifest.xml
include/: visualization.h
include/features/: feature.h  kernel.h  normal.h  sift3d.h  surf3d.h  surflet.h
include/keypoint_detectors/: keypoint.h
include/keypoints/: harris_6d.h  keypoint_extractor.h  narf.h  sift_extractor.h
include/util/: util.h
src/: correspondence_detection.cpp  correspondence_grouping.cpp  detect_keypoints.cpp  extract_features.cpp  extract_narf.cpp  save_clouds.cpp  test.cpp  vision_3d.cpp  visualization.cpp
src/features/: normal.cpp  surflet.cpp  surlet.cpp
src/keypoints/: harris_6d.cpp  keypoint.cpp  keypoint_extractor.cpp  narf.cpp  sift_extractor.cpp
src/util/: util.cpp
